Fix toolbar causing the entire page to overflow

--- a/src/components/Mainbar.css
+++ b/src/components/Mainbar.css
@@ -3,6 +3,7 @@
   padding-block: 0.5em;
   /* background-color: var(--background); */
   background-color: var(--surface-container-low);
+  overflow-y: auto;
 }
 
 #mainbar-target > * {
